--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,19 +1,24 @@
+.home {
+  height: 100vh;
+  background: #eaeaea;
+}
+
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 100vh;
 }
 
 .main {
-  padding: 5rem 0;
+  padding: 1rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -41,13 +46,14 @@
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  color: #0070f3;
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
+  color: #363636;
 }
 
 .title,
@@ -57,37 +63,22 @@
 
 .description {
   line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  font-size: 1rem;
+  color: grey;
 }
 
 .card {
-  margin: 1rem;
-  padding: 1.5rem;
+  margin: 10px;
+  padding: 10px;
   text-align: left;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
+  width: 90%;
+  display: flex;
+  flex-direction: column;
 }
 
 .card:hover,
@@ -99,23 +90,44 @@
 
 .card h2 {
   margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 13px;
+  width: 100%;
+  color: #5d5d5d;
+}
+
+.visible p {
+  margin: 0;
+  width: 100%;
+  font-size: 10px;
+  line-height: 1.5;
+  display: none;
 }
 
 .card p {
   margin: 0;
-  font-size: 1.25rem;
+  width: 100%;
+  font-size: 10px;
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.a {
+  margin: 10px;
+  padding: 10px;
+  font-size: 13px;
+  width: 20%;
+  color: whitesmoke;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  background: #0070f3;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.a:hover,
+.a:focus,
+.a:active {
+  background: white;
+  color: #0070f3;
+  border-color: #0070f3;
 }
